whoapp/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-app
  namespace: whoapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-app

  template:
    metadata:
      labels:
        app: hello-app

    spec:
      containers:
        - name: hello-app
          image: traefik/whoami:v1.13
          args:
            - --name=GREEN-v1.13
          ports:
            - containerPort: 80

  strategy:
    blueGreen:
      activeService: hello-app-active
      previewService: hello-app-preview
      autoPromotionEnabled: false
