whoapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
